--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         margin: 30px 0 10px;
         width: 200px;
       }
+      img.logo {
+        display: block;
+        height: 75px;
+        margin: 0 auto 25px;
+      }
       body > i {
         font-size: 24px;
       }
@@ -161,7 +166,7 @@
     </style>
   </head>
   <body>
-    <h1>Funny fotobox</h1>
+    <img class="logo" src="ffb-logo.svg">
     <i class="fa fa-camera"></i>
     <p>Fotobúdka, ktorá oživí každú akciu</p>
     <hr>
