--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&amp;subset=latin-ext" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Funny Foto box</title>
+    <title>Novy titulok</title>
     <style>
       body {
         background-color: #f0f0f0;
@@ -201,7 +201,7 @@
       </div>
       <div>
         <i class="fa fa-phone"></i>
-        <p>+421 911 898 788</p>
+        <p>0911 898 788</p>
       </div>
     </div>
     <p>© 2019 Funny Fotobox, Všetky práva vyhradené.</p>
