--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </div>
       <div>
         <img src="ffb1.png">
-        <h2>Okamžitá tlač</h2>
+        <h2>Okamžitá aaa</h2>
         <p>Sed eros ex, convallis quis lacinia quis, varius id nisl. Vivamus pulvinar ante at ex sagittis sodales. Donec ut turpis egestas, porttitor nulla id, aliquet neque.</p>
       </div>
       <div>
